# instruction-hub-toolchain

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: adit-reviewer-prompt.md  ci.yml  codex-aditbot.yml  codex-bug-bot.yml  pr-check.yml  publish.yml
python-core/src/promptless_instruction_hub/: assets.py  config.py  status.py
python-core/src/promptless_instruction_hub/release/: manifests.py
python-core/src/promptless_instruction_hub/render/: __init__.py  codex.py  common.py
python-core/src/promptless_instruction_hub/scan/: __init__.py
python-core/src/promptless_instruction_hub/validate/: hub.py
python-core/tests/: test_instruction_hub.py
python-core/tests/fixtures/dogfood-source/: AGENTS.md
schemas/: instruction-hub.schema.json  release-manifest.schema.json
scripts/: run.sh
src/promptless_instruction_hub/: __init__.py  assets.py  cli.py  compiler.py  config.py  errors.py  fs.py  managed_runtime.py  mcp_config.py  mcp_status.py  models.py
src/promptless_instruction_hub/managed_runtime_assets/host-enrollment/: promptless-host-runtime  (+1 more)
src/promptless_instruction_hub/release/: __init__.py  hashing.py  manifests.py  versions.py
src/promptless_instruction_hub/render/: assets.py  claude.py  codex.py  common.py  cursor.py  gemini.py  mcp.py  plugins.py
src/promptless_instruction_hub/scan/: hub.py
src/promptless_instruction_hub/validate/: __init__.py  hub.py
tests/: test_instruction_hub.py  test_managed_bootstrap.py
tests/fixtures/dogfood-source/: .mcp.json  AGENTS.md  CLAUDE.md
tests/fixtures/empty-hub/: README.md
(+5 files in other folders)
