[project]
name = "promptless-instruction-hub"
version = "0.1.0"
description = "Promptless Instruction Hub scanner and distribution compiler"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
promptless-instruction-hub = "promptless_instruction_hub.cli:main"
pi = "promptless_instruction_hub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptless_instruction_hub"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.6.2",
    "ty==0.0.1a24",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
